src/objects/ICD__c.object
<CustomObject>
    <description>Lists the International Classification of Diseases (ICD) 9 and 10 codes.</description>
    <fields>
        <fullName>Auto_Id__c</fullName>
        <description>Auto generated number that can be used by external systems.</description>
        <displayFormat>{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Auto Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Code_Type__c</fullName>
        <description>The ICD Code Type per actual code</description>
        <label>Code Type</label>
        <picklist>
            <picklistValues>
                <fullName>ICD-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICD-10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Icd_Description__c</fullName>
        <label>ICD/DSM-VDescription/Axis-IV Description</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Description__c</fullName>
        <label>Section Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Number__c</fullName>
        <description>This is the &quot;chapter&quot; number found in the XML for ICD10 to classify individual codes.</description>
        <label>Section Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section_Range__c</fullName>
        <description>This is the range of codes associated with each chapter. Only applies to ICD 10.</description>
        <label>Section Range</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Icd_Description__c</fullName>
        <label>Short ICD Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <description>In case we decide there are codes we do not want to show we can set to visible false. Then we don&apos;t have to delete records.</description>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>ICD</label>
    <nameField>
        <label>ICD Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ICDs</pluralLabel>
    <recordTypes>
        <fullName>ICD10</fullName>
        <active>true</active>
        <label>ICD10</label>
    </recordTypes>
    <recordTypes>
        <fullName>ICD9</fullName>
        <active>true</active>
        <label>ICD9</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>